<resources>
    <string name="action_settings">Settings</string>
    <string name="action_dialpad">Dialpad</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_end_conversation">Close conversation</string>
    <string name="action_start_secret_chat">Start secret chat</string>
    <string name="action_destroy_secret_chat">Destroy secret chat</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="share_with">Share with…</string>
    <string name="edit">Edit</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_call_ringtone_summary">Ringtone for incoming calls</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time notifications are silenced after detecting activity on one of your other devices.</string>
    <string name="pref_ui_options">User interface</string>
    <string name="attach_choose_picture">Choose picture</string>
    <string name="attach_take_picture">Take picture</string>
    <string name="attach_record_voice">Record voice</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="pref_security_settings">Security</string>
    <string name="pref_allow_message_correction">Allow message correction</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_expert_options">Expert settings</string>
    <string name="pref_noisy_notifications_throttling">Throttle noisy notifications</string>
    <string name="pref_noisy_notifications_throttling_summary">Throttle sound and vibration for notifications received from one conversation during short period of time</string>
    <string name="pref_autojoin">Synchronize bookmarks</string>
    <string name="pref_autojoin_summary">Set “autojoin” flag when entering or leaving a MUC and react to modifications made by other clients.</string>
    <string name="copy_original_url">Copy original URL</string>
    <string name="save_to_downloads">Save to Downloads</string>
    <string name="send_again">Send again</string>
    <string name="pref_keep_foreground_service">Foreground service</string>
    <string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
    <string name="choose_file">Choose file</string>
    <string name="download_x_file">Download %s</string>
    <string name="delete_x_file">Delete %s</string>
    <string name="cancel_transmission">Cancel transmission</string>
    <string name="pref_show_dynamic_tags">Dynamic Tags</string>
    <string name="pref_show_dynamic_tags_summary">Allow organizing with tags</string>
    <string name="pref_group_by_tags">Group by Dynamic Tags</string>
    <string name="pref_group_by_tags_summary">Allow to grouping contacts by their tags</string>
    <string name="pref_group_conversations_by_tags">Group Conversations by Dynamic Tags</string>
    <string name="pref_group_conversations_by_tags_summary">Allow to grouping conversations list by their tags</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="grant_admin_privileges">Grant admin privileges</string>
    <string name="remove_admin_privileges">Revoke admin privileges</string>
    <string name="remove_from_room">Remove from group chat</string>
    <string name="ban_from_conference">Ban from group chat</string>
    <string name="reply">Reply</string>
    <string name="send_location">Send location</string>
    <string name="pref_dont_trust_system_cas_title">Don’t trust system CAs</string>
    <string name="pref_dont_trust_system_cas_summary">All certificates must be manually approved</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="pref_show_connection_options">Extended connection settings</string>
    <string name="pref_show_connection_options_summary">Show hostname and port settings when setting up an account</string>
    <string name="pref_connection_options">Connection</string>
    <string name="pref_use_tor">Connect via Tor</string>
    <string name="pref_use_tor_summary">Tunnel all connections through the Tor network. Requires Orbot</string>
    <string name="correct_message">Correct message</string>
    <string name="delete_locally">Delete locally</string>
    <string name="muc_delete_message">Delete message</string>
    <string name="retract_message">Retract message</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_navigation">Navigation</string>
    <string name="pref_privacy">Privacy and data</string>
    <string name="pref_show_navigation_bar">Show navigation bar</string>
    <string name="pref_show_navigation_bar_summary">Use alternative navigation way via navigation bar on the bottom of the screen</string>
    <string name="pref_avatars_shape">Avatars shape</string>
    <string name="pref_avatar_shape_summary">Allows you to select avatars shape globally</string>
    <string name="pref_use_green_background">Accent Background</string>
    <string name="pref_use_green_background_summary">Use accent background for received messages</string>
    <string name="pref_skip_image_editor_screen">Skip image editor</string>
    <string name="pref_skip_image_editor_screen_summary">Don’t open image editor screen automatically for single image attachments</string>
    <string name="pref_show_account_indicator">Account indicator</string>
    <string name="pref_show_account_indicator_details">Mark conversations with different colors in case of several account</string>
    <string name="pref_delete_omemo_identities">Reset encryption keys</string>
    <string name="pref_delete_omemo_identities_summary">Generate new encryption keys. Your contacts will need to confirm this device again. Use this only as a last resort.</string>
    <string name="show_error_message">Show error message</string>
    <string name="select_message">Select Message</string>
    <string name="pref_blind_trust_before_verification">Blind Trust Before Verification</string>
    <string name="pref_blind_trust_before_verification_summary">Trust new devices from non-verified contacts, but prompt manual confirmation of new devices for verified contacts.</string>
    <string name="pref_automatically_delete_messages">Automatic message deletion</string>
    <string name="pref_automatically_delete_messages_description">Automatically delete messages from this device that are older than the configured time frame.</string>
    <string name="retry_decryption">Retry decryption</string>
    <string name="pref_validate_hostname">Validate hostname with DNSSEC</string>
    <string name="pref_validate_hostname_summary">Server certificates that contain the validated hostname are considered verified</string>
    <string name="attach_record_video">Record video</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="huawei_protected_apps">Protected Apps</string>
    <string name="huawei_protected_apps_summary">To keep receiving notifications, even when the screen is turned off, you need to add LibreSpan to the list of protected apps.</string>
    <string name="pref_omemo_setting">Encryption</string>
    <string name="pref_omemo_setting_summary_default_off">Encryption must be enabled explicitly for new conversations.</string>
    <string name="pref_use_share_location_plugin">Share Location Plugin</string>
    <string name="pref_use_share_location_plugin_summary">Use the Share Location Plugin instead of the built-in map</string>
    <string name="copy_link">Copy web address</string>
    <string name="open_with">Open with…</string>
    <string name="group_chats_and_channels"><![CDATA[Group Chats & Channels]]></string>
    <string name="pref_channel_discovery_summary">Most users should choose ‘jabber.network’ for better suggestions from the entirety of the public XMPP ecosystem.</string>
    <string name="pref_channel_discovery">Channel discovery method</string>
    <string name="return_to_ongoing_call">Return to ongoing call</string>
    <string name="add_to_favorites">Pin to top</string>
    <string name="unified_push_distributor">UnifiedPush Distributor</string>
    <string name="pref_up_push_account_title">XMPP Account</string>
    <string name="pref_up_push_account_summary">The account through which push messages will be received.</string>
    <string name="pref_up_push_server_title">Push Server</string>
    <string name="pref_up_push_server_summary">A user-chosen push server to relay push messages via XMPP to your device.</string>
    <string name="report_spam">Report spam</string>
    <string name="add_reaction">Add reaction…</string>
    <string name="retry_with_p2p">Retry with P2P</string>
    <string name="pref_fullscreen_notification_summary">Allow this app to show incoming call notifications that take up the full screen when the device is locked.</string>
    <string name="pref_fullscreen_notification">Full screen notifications</string>
    <string name="pref_call_integration">Call integration</string>
    <string name="pref_call_integration_summary">Calls from this app interact with regular phone calls, such as ending one call when another starts.</string>
    <string name="pref_accept_invites_from_strangers">Invites from strangers</string>
    <string name="pref_accept_invites_from_strangers_summary">Accept invites to group chats from strangers</string>
    <string name="pref_title_trust_system_ca_store">Certificate authorities</string>
    <string name="pref_title_trust_system_ca_store_summary">Trust the system’s CA certificates</string>
    <string name="detect_mim">Require channel binding</string>
    <string name="detect_mim_summary">Channel binding can detect some machine-in-the-middle attacks</string>
    <string name="save_to_saved_messages">Save to Saved Messages</string>
    <string name="conversation_menu_archive">Archive</string>
    <string name="conversation_menu_profile">Profile</string>
    <string name="conversation_menu_group_info">About group</string>
    <string name="conversation_menu_leave_conference">Leave group chat</string>
    <string name="group_menu_save_group">Save group</string>
    <string name="group_menu_remove_saved">Remove from saved</string>
    <string name="group_menu_delete_group_for_all">Delete group for everyone</string>
<string name="muc_make_moderator">Make moderator</string>
<string name="muc_remove_moderator">Remove moderator role</string>
<string name="muc_allow_writing">Allow sending messages</string>
<string name="muc_make_read_only">Make read-only</string>
<string name="muc_manage_participant">Manage participant</string>
</resources>