<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Everyday actions first: keep long-press useful for normal users. -->
    <item android:id="@+id/quote_message" android:title="@string/reply" android:visible="false" />
    <item android:id="@+id/action_add_reaction" android:title="@string/add_reaction" android:visible="false" />
    <item android:id="@+id/copy_message" android:title="@string/copy_to_clipboard" android:visible="false" />
    <item android:id="@+id/share_with" android:title="@string/share_with" android:visible="false" />
    <item android:id="@+id/save_to_saved_messages" android:title="@string/save_to_saved_messages" android:visible="false" />
    <item android:id="@+id/correct_message" android:title="@string/correct_message" android:visible="false" />
    <item android:id="@+id/retract_message" android:title="@string/retract_message" android:visible="false" />
    <item android:id="@+id/delete_locally" android:title="@string/delete_locally" android:visible="false" />
    <item android:id="@+id/select_message" android:title="@string/select_message" android:visible="false" />

    <!-- Context-specific content actions. -->
    <item android:id="@+id/open_with" android:title="@string/open_with" android:visible="false" />
    <item android:id="@+id/copy_link" android:title="@string/copy_link" android:visible="false" />
    <item android:id="@+id/copy_url" android:title="@string/copy_original_url" android:visible="false" />
    <item android:id="@+id/save_to_downloads" android:title="@string/save_to_downloads" android:visible="false" />
    <item android:id="@+id/download_file" android:title="@string/download_x_file" android:visible="false" />
    <item android:id="@+id/delete_file" android:title="@string/delete_x_file" android:visible="false" />

    <!-- MUC moderation is contextual: visible only to room moderators/admins on other users' messages. -->
    <item android:id="@+id/muc_moderate_message" android:title="@string/muc_delete_message" android:visible="false" />
    <item
        android:id="@+id/muc_manage_participant"
        android:title="@string/muc_manage_participant"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/give_moderator_role"
                android:title="@string/muc_make_moderator"
                android:visible="false" />
            <item
                android:id="@+id/remove_moderator_role"
                android:title="@string/muc_remove_moderator"
                android:visible="false" />
            <item
                android:id="@+id/grant_voice"
                android:title="@string/muc_allow_writing"
                android:visible="false" />
            <item
                android:id="@+id/revoke_voice"
                android:title="@string/muc_make_read_only"
                android:visible="false" />
            <item
                android:id="@+id/give_admin_privileges"
                android:title="@string/grant_admin_privileges"
                android:visible="false" />
            <item
                android:id="@+id/remove_admin_privileges"
                android:title="@string/remove_admin_privileges"
                android:visible="false" />
            <item
                android:id="@+id/remove_from_room"
                android:title="@string/remove_from_room"
                android:visible="false" />
            <item
                android:id="@+id/ban_from_conference"
                android:title="@string/ban_from_conference"
                android:visible="false" />
        </menu>
    </item>

    <!-- Failure / transport / moderation actions stay available, but lower in the menu. -->
    <item android:id="@+id/send_again" android:title="@string/send_again" android:visible="false" />
    <item android:id="@+id/send_again_as_p2p" android:title="@string/retry_with_p2p" android:visible="false" />
    <item android:id="@+id/cancel_transmission" android:title="@string/cancel_transmission" android:visible="false" />
    <item android:id="@+id/retry_decryption" android:title="@string/retry_decryption" android:visible="false" />
    <item android:id="@+id/show_error_message" android:title="@string/show_error_message" android:visible="false" />
    <item android:id="@+id/action_report_and_block" android:title="@string/report_spam" android:visible="false" />
</menu>
