<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/attach_choose_picture" android:icon="@drawable/ic_image_24dp" android:title="@string/attach_choose_picture" />
    <item android:id="@+id/attach_take_picture" android:icon="@drawable/ic_camera_alt_24dp" android:title="@string/attach_take_picture" />
    <item android:id="@+id/attach_choose_file" android:icon="@drawable/ic_description_24dp" android:title="@string/choose_file" />
    <item android:id="@+id/attach_record_video" android:icon="@drawable/ic_videocam_24dp" android:title="@string/attach_record_video" />
    <item android:id="@+id/attach_record_voice" android:visible="false" android:icon="@drawable/ic_mic_24dp" android:title="@string/attach_record_voice" />
    <item android:id="@+id/attach_location" android:icon="@drawable/ic_location_pin_24dp" android:title="@string/send_location" />
</menu>
